# incurs

./: .gitignore  AGENTS.md  Cargo.toml  MIGRATION.md  README.md
.changeset/: add-version-to-run-context.md  custom-global-options.md  example-shell-comments.md  mcp-command-metadata.md  root-banner.md  tame-pillows-accept.md  variadic-positional-args.md
.github/workflows/: rust.yml
bench/: cli.ts  measure.ts
crates/incur/: Cargo.toml
crates/incur-cli/: Cargo.toml
crates/incur-cli/src/: main.rs
crates/incur-macros/: Cargo.toml
crates/incur-macros/src/: args.rs  common.rs  env.rs  lib.rs  options.rs
crates/incur/examples/: todoapp.rs
crates/incur/src/: agents.rs  cli.rs  command.rs  config.rs  config_schema.rs  errors.rs  fetch.rs  filter.rs  formatter.rs  help.rs  http.rs  lib.rs  mcp.rs  middleware.rs  openapi.rs  output.rs  parser.rs  schema.rs  skill.rs  streaming.rs  sync_mcp.rs  sync_skills.rs
crates/incur/tests/: e2e.rs  parser_test.rs
crates/incurs/: Cargo.toml
crates/incurs-cli/: Cargo.toml
crates/incurs-cli/src/: main.rs
crates/incurs-extras/: Cargo.toml
crates/incurs-extras/src/: lib.rs
crates/incurs-macros/: Cargo.toml
crates/incurs-macros/src/: common.rs  lib.rs
crates/incurs/examples/: todoapp.rs
crates/incurs/src/: agents.rs  cli.rs  command.rs  completions.rs  config.rs  config_schema.rs  errors.rs  fetch.rs  filter.rs  formatter.rs  help.rs  http.rs  lib.rs  mcp.rs  middleware.rs  openapi.rs  output.rs  pager.rs  parser.rs  schema.rs  skill.rs  streaming.rs  sync_mcp.rs  sync_skills.rs
crates/incurs/tests/: compile.rs  e2e.rs  parser_test.rs  typed.rs
crates/incurs/tests/ui/: typed_output_mismatch.rs  typed_output_mismatch.stderr
examples/: todoapp.ts
src/: Cli.test-d.ts  Cli.test.ts  Cli.ts  Help.ts  Mcp.ts  Openapi.ts  e2e.test.ts  middleware.ts
tests/: compare.sh
tests/parity/: cases.json  inventory.json
xtask/: Cargo.toml
xtask/src/: main.rs
