[package]
name = "incur"
version = "0.1.0"
edition = "2024"

[dependencies]
incur-macros = { path = "../incur-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
sha2 = "0.10"
dirs = "6"
toon-format = { version = "0.4", optional = true }
tiktoken-rs = { version = "0.6", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }
axum = { version = "0.8", optional = true }
axum-streams = { version = "0.21", features = ["json"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true }
hyper = { version = "1", optional = true }
rmcp = { version = "0.1", features = ["server", "transport-io"], optional = true }
oas3 = { version = "0.20", optional = true }
openapiv3 = { version = "2", optional = true }

[features]
default = ["cli", "toon", "tokens"]
cli = []
toon = ["toon-format"]
tokens = ["tiktoken-rs"]
yaml = ["serde_yaml_ng"]
http = ["axum", "axum-streams", "tower", "tower-http", "hyper"]
mcp = ["rmcp"]
openapi = ["oas3", "openapiv3"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1"
async-stream = "0.3"
serde_json = "1"
regex-lite = "0.1"
