[package]
name = "incurs-cli"
version = "0.3.0"
edition = "2024"
description = "Code generation tools for incurs-based Rust CLIs"
license = "MIT"
repository = "https://github.com/douglance/incurs"

[[bin]]
name = "incurs"
path = "src/main.rs"

[dependencies]
incurs = { path = "../incurs", version = "0.3.0", features = ["cli"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
syn = { version = "2", features = ["full"] }
